# RTS_Engine

./: .gitignore  CMakeLists.txt  readme.md
game/: CMakeLists.txt
game/include/: Game.h  Unit.h  UnitManager.h
game/include/states/: RessourceHandler.h  StateButtonTest.h  StateGame.h  StateIntro.h  StateMainMenu.h
game/res/: audio.cfg  fonts.cfg  textures.cfg
game/res/Entities/: Archer.entity  AxeThrower.entity  Grunt.entity  Note.txt  Peasant.entity  Peon.entity  Player.entity  Soldier.entity  Tree.entity
game/res/GUI_Interfaces/: GameMenu.interface  MainMenu.interface  RessourceMenu.interface  SelectionSprite.interface  UnitMenu.interface
game/res/GUI_Styles/: RessourceMenu.style  RessourceMenuBar.style  Selection.style  SelectionSprite.style  UnitMenu.style  UnitMenuLabelArcher.style  UnitMenuLabelPeasant.style  UnitMenuLabelSoldier.style
game/res/Maps/: demo.map  forest.map  map1.map
game/res/Spritesheets/: Archer.sheet  AxeThrower.sheet  Grunt.sheet  Note.txt  Peasant.sheet  Peon.sheet  Player.sheet  Soldier.sheet
game/res/Textures/: Selection.xcf
game/res/Tilesheets/: Sheet1.tilesheet  Summer.tilesheet
game/src/: Game.cpp  Main.cpp
game/src/states/: RessourceHandler.cpp  StateButtonTest.cpp  StateGame.cpp  StateIntro.cpp  StateMainMenu.cpp
include/: BaseComponent.h  ECS_Types.h  Engine.h  EventManager.h  Game.h  TransformComponent.h  Window.h
include/game/: Game.h
include/game/states/: StateButtonTest.h  StateGame.h  StateIntro.h  StateMainMenu.h
include/ragnarok/: SharedContext.h
include/ragnarok/ecs/: ECSTypes.h  EntityEvents.h  EntityMessages.h
include/ragnarok/events/: EventDetails.h  EventInfo.h  EventManager.h  EventTypes.h
include/ragnarok/gui/: GUIElement.h  GUIEvent.h  GUIInterface.h  GUIManager.h  GUIStyle.h  test_main.cpp
include/ragnarok/map/: Map.h  MapDefinitions.h  MapHelpers.h  TileSet.h
include/ragnarok/messages/: Communicator.h  Message.h
include/ragnarok/particles/: BaseGenerator.h  BaseUpdater.h  Emitter.h  ForceApplicator.h  ParticleSystem.h
include/ragnarok/resources/: AudioManager.h
include/ragnarok/sounds/: SoundManager.h
include/ragnarok/states/: StateDependent.h  StateManager.h  StateTypes.h
include/ragnarok/threads/: Worker.h
ragnarok/: CMakeLists.txt
ragnarok/include/: SharedContext.h
ragnarok/include/ecs/: ECSTypes.h  EntityEvents.h  EntityMessages.h
ragnarok/include/ecs/components/: C_Attack.h  C_Collidable.h  C_Controller.h  C_Drawable.h  C_Health.h  C_HealthUI.h  C_Position.h  C_Ressource.h  C_Selection.h  C_SoundListener.h  C_SpriteSheet.h  C_State.h
ragnarok/include/ecs/core/: C_Base.h  EntityManager.h
ragnarok/include/ecs/systems/: S_Collision.h  S_Combat.h  S_DeadRemover.h  S_EntityUI.h  S_Movement.h  S_Renderer.h  S_SheetAnimation.h  S_State.h
ragnarok/include/events/: Binding.h  EventDetails.h  EventManager.h
ragnarok/include/gui/: GUIElement.h  GUIEvent.h  GUIInterface.h  GUIManager.h  GUIStyle.h
ragnarok/include/gui/elements/: GUICheckBox.h  GUIDropDownMenu.h  GUILabel.h  GUIScrollbar.h  GUISprite.h  GUITextField.h
ragnarok/include/gui/specialized/: FileManager.h  VerticalDropDown.h
ragnarok/include/interaction/: GameClickManager.h
ragnarok/include/map/: DiscreteMap.h  Map.h  MapLoadee.h  TileInfo.h  TileMap.h
ragnarok/include/messages/: MessageHandler.h  Observer.h
ragnarok/include/network/: Command.h  Server.h
ragnarok/include/particles/: ParticleContainer.h
ragnarok/include/particles/generators/: ColorRange.h  PointPosition.h  Properties.h  SizeRange.h
ragnarok/include/particles/updaters/: Collisions.h  Drawables.h  Forces.h  Interpolator.h
ragnarok/include/resources/: FontManager.h  ResourceManager.h  TextureManager.h
ragnarok/include/sounds/: SoundProps.h
ragnarok/include/sprites/: AnimBase.h  AnimDirectional.h  SpriteSheet.h
ragnarok/include/states/: BaseState.h  StateLoading.h
ragnarok/include/threads/: FileLoader.h
ragnarok/include/utilities/: RandomGenerator.h
ragnarok/include/window/: Renderer.h
ragnarok/src/ecs/core/: EntityManager.cpp  S_Base.cpp  SystemManager.cpp
ragnarok/src/ecs/systems/: S_Collision.cpp  S_Combat.cpp  S_Control.cpp  S_DeadRemover.cpp  S_EntityUI.cpp  S_Movement.cpp  S_Renderer.cpp  S_SheetAnimation.cpp  S_Sound.cpp  S_State.cpp
ragnarok/src/events/: EventManager.cpp
ragnarok/src/gui/: GUIElement.cpp  GUIInterface.cpp  GUIManager.cpp
ragnarok/src/gui/elements/: GUICheckBox.cpp  GUIDropDownMenu.cpp  GUILabel.cpp  GUIScrollbar.cpp  GUISprite.cpp  GUITextField.cpp
ragnarok/src/gui/specialized/: FileManager.cpp  VerticalDropDown.cpp
ragnarok/src/interaction/: GameClickManager.cpp
ragnarok/src/map/: Map.cpp  TileMap.cpp  TileSet.cpp
ragnarok/src/network/: Server.cpp
ragnarok/src/particles/: Emitter.cpp  ParticleSystem.cpp
ragnarok/src/sounds/: SoundManager.cpp
ragnarok/src/sprites/: AnimBase.cpp  AnimDirectional.cpp  SpriteSheet.cpp
ragnarok/src/states/: StateLoading.cpp  StateManager.cpp
ragnarok/src/threads/: FileLoader.cpp
ragnarok/src/window/: Renderer.cpp  Window.cpp
res/: keys.cfg  textures.cfg
res/Entities/: Note.txt
res/GUI_Interfaces/: ButtonTest.interface
res/GUI_Styles/: ButtonTestQuit.style
res/Maps/: map1.map
src/: Engine.cpp  EventManager.cpp  Game.cpp  SharedContext.h  TransformComponent.cpp  Window.cpp  main.cpp
src/ecs/: BaseComponent.h  BaseSystem.cpp  BaseSystem.h  Bitmask.h  ECSTypes.h  EntityEvents.h  EntityManager.cpp  EntityManager.h  EntityMessages.h  EventQueue.h  SystemManager.cpp  SystemManager.h
src/game/: Game.cpp  Game.h  Main.cpp  main.cpp
src/gui/: GUIEvent.h
src/input/: Bindings.h  EventDetails.h  EventInfo.h  EventManager.cpp  EventManager.h  EventTypes.h
src/message/: Communicator.h  Message.h  MessageHandler.h  Observer.h
src/state/: BaseState.h  StateDependent.h  StateLoading.cpp  StateLoading.h  StateManager.cpp  StateManager.h  StateTypes.h
src/threading/: FileLoader.cpp  FileLoader.h  Worker.h
src/utility/: Helpers.h  RandomGenerator.h  Utilities.h
src/window/: Renderer.cpp  Renderer.h  Window.cpp  Window.h
(+78 files in other folders)
